<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HoneyBadgerApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="title_activity_successful_login">SuccessfulLogin</string>
    <color name="white_color">#FFFFFF</color>

</resources>
