<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white_color"
    tools:context="mhd.example.honeybadgerapp.MainActivity" >

    
    <EditText
        android:id="@+id/input_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/username_placeholder" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/forgot_password_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_button"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"  />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account_button" />


</RelativeLayout>